--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,22 @@
 @import "tailwindcss";
+
+nav{
+    display: flex;
+    gap: 34px;
+background-color: black;
+color: white;
+margin: 10px;
+}
+*{
+    padding: 0;
+    margin: 0;
+}
+
+li{
+    list-style-type: none;
+    padding: 22px;
+    
+}
+li a{
+    color: white;
+}
